Modernize code to use current Java idioms
- Replace Arrays.asList() with List.of() for immutable lists
- Replace Optional.get() with orElseThrow() for safer access
- Replace assertFalse(\!isPresent()) with assertTrue(isEmpty())
- Replace fail() with Assertions.fail()
- Improve exception handling in CompletableFuture tests
- Add missing assertion in BinaryOperatorTest

These changes bring the code up to date with modern Java practices
while maintaining compatibility with the training material structure.

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>